# cheetahclaws

./: .gitignore  README.md  ROADMAP.md  agent.py  cc_config.py  cheetahclaws.py  clawspring.py  compaction.py  context.py  nano_claude.py  providers.py  pyproject.toml  runtime.py  tools.py
bridges/: __init__.py  slack.py  telegram.py  wechat.py
checkpoint/: hooks.py  store.py
commands/: advanced.py  checkpoint_plan.py  config_cmd.py  core.py  session.py
docs/: README.ES.MD  README.FR.MD  comparison_claude_code_vs_nano_v3.03_cn.md  contributor_guide.md
docs/guides/: recipes.md  reference.md  web-ui.md
modular/video/: cmd.py
tests/: e2e_checkpoint.py  e2e_commands.py  e2e_compact.py  e2e_plan_mode.py  e2e_plan_tools.py  e2e_slash_prompt.py  test_cache_tokens.py  test_checkpoint.py  test_compaction.py  test_deepseek_thinking.py  test_skill_nested.py  test_web_api.py
tools/: __init__.py  browser.py  email.py  files.py
ui/: __init__.py  render.py
web/: api.py  auth.py  chat.html  db.py  models.py  server.py
web/static/js/: chat.js  init.js  settings.js  sidebar.js
